--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
 
 {% block content %}
 <div class="text-center">
-  <h1 class="mb-4">Bienvenido - Seleccion materiales BM</h1>
+  <h1 class="mb-4">Bienvenido - Seleccion materiales BES</h1>
   <p>
-    <a href="{{ url_for('flujo_a') }}" class="btn btn-primary">Iniciar Flujo A: Ajuste de medida</a>
+    <a href="{{ url_for('flujo_b') }}" class="btn btn-primary">Iniciar Flujo b: saca tubing</a>
   </p>
 </div>
 {% endblock %}
